feat: Otimizações de performance para Lighthouse 90+
- Removido delay do título principal (LCP element) para melhorar LCP
- Criado HeroAnalyticsDashboard separado com lazy loading
- Lazy load de Framer Motion (reduz JavaScript execution time)
- Lazy load de Meteors e StarrySky (não críticos para LCP)
- Implementado LazySection para componentes abaixo do fold
- Otimizado AnimatedBeam para evitar framer-motion quando delay baixo
- Adicionado useReducedMotion hook para reduzir animações em dispositivos low-end
- Otimizações de imagens (lazy loading, contain layout, dimensions)
- Melhorado code splitting no vite.config.ts
- Configurado gzip compression no nginx.conf

Resultados esperados:
- FCP: 3.2s → ~2.5s
- LCP: 4.5s → ~3.5s
- JavaScript execution: 1.9s → ~1.3s
- Performance score: 78 → 85-90+

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,12 +4,14 @@ server {
     root /var/www/leadflow/dist;
     index index.html;
 
-    # Gzip compression
+    # Gzip compression (otimizado para HTML também)
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
+    gzip_comp_level 6;
     gzip_proxied expired no-cache no-store private must-revalidate auth;
-    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/javascript;
+    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/javascript application/json text/html;
+    gzip_disable "msie6";
 
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
@@ -32,6 +34,8 @@ server {
         add_header Cache-Control "no-cache, no-store, must-revalidate";
         add_header Pragma "no-cache";
         add_header Expires "0";
+        add_header Vary "Accept-Encoding";
+        gzip on;
         try_files $uri =404;
     }
 
