fix: permitir config.env no Git e corrigir caminho no server.js - Adicionado config.env ao repositório para deployment - Corrigido caminho do config.env para usar __dirname - Atualizado .gitignore para permitir backend/config.env

--- a/.gitignore
+++ b/.gitignore
@@ -147,6 +147,9 @@ build/
 # backend/config.env - Now tracked for deployment
 # backend/.env - Temporarily commented for debugging
 
+# Exceção: permitir config.env no backend (necessário para deployment)
+!backend/config.env
+
 # Deployment files
 deploy/
 .deployment/
