--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
     "@supabase/supabase-js": "^2.53.0",
     "@tanstack/react-query": "^5.85.9",
     "@tanstack/react-query-devtools": "^5.85.9",
@@ -55,6 +57,8 @@
     "slick-carousel": "^1.8.1",
     "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.181.2",
+    "three-stdlib": "^2.36.1",
     "winston": "^3.11.0",
     "zod": "^4.0.14"
   },
@@ -65,6 +69,7 @@
     "@types/react-dom": "^19.1.6",
     "@types/react-slick": "^0.23.13",
     "@types/react-window": "^1.8.8",
+    "@types/three": "^0.181.0",
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
     "cross-env": "^10.0.0",
