--- a/backend/package.json
+++ b/backend/package.json
@@ -20,12 +20,14 @@
     "@supabase/supabase-js": "^2.57.4",
     "axios": "^1.6.0",
     "colors": "^1.4.0",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.21.2",
     "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
     "node-cron": "^3.0.3",
+    "nodemailer": "^7.0.11",
     "pm2": "^6.0.11",
     "uuid": "^9.0.1"
   },
