Fix lead count discrepancy, subscription renewal logic, and UI improvements for LeadCard and Toasts

--- a/backend/config.env
+++ b/backend/config.env
@@ -54,3 +54,10 @@ BACKEND_URL=https://api.leadbaze.io
 # WHATSAPP WEBHOOK CONFIGURATION (opcional)
 # =====================================================
 # WHATSAPP_WEBHOOK_TOKEN=seu-token-de-autenticacao-aqui
+
+# =====================================================
+# GOOGLE MAPS API CONFIGURATION
+# =====================================================
+GOOGLE_MAPS_API_KEY=AIzaSyBmE4O7ox01HwCKaVX0HWCDcyDrprXZu0E
+GOOGLE_MAPS_CACHE_TTL=3600
+GOOGLE_MAPS_RATE_LIMIT=100
